--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GridViewPractice</string>
+    <string name="welcome_txt">Hello World! Dialog activity here.</string>
 </resources>
